force-app/main/default/objects/Specification__c/Specification__c.object-meta.xml
<CustomObject>
    <description>Specification/MTO</description>
    <label>Specification</label>
    <nameField>
        <label>Spec Id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Specifications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>