force-app/main/default/objects/Specification__c/fields/account__c.field-meta.xml
<CustomField>
    <fullName>account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>MTO Finisher or TPM</description>
    <inlineHelpText>MTO Finisher or TPM</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Specifications</relationshipLabel>
    <relationshipName>Specifications</relationshipName>
    <type>Lookup</type>
</CustomField>