force-app/main/default/objects/Specification__c/fields/accountAEId__c.field-meta.xml
<CustomField>
    <fullName>accountAEId__c</fullName>
    <formula>opportunity__r.Account.ae__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account AE Id</label>
    <type>Text</type>
</CustomField>