force-app/main/default/objects/Specification__c/fields/accountOwnerId__c.field-meta.xml
<CustomField>
    <fullName>accountOwnerId__c</fullName>
    <formula>opportunity__r.Account.OwnerId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Owner Id</label>
    <type>Text</type>
</CustomField>