force-app/main/default/objects/Specification__c/fields/Additional_Packaging_Required__c.field-meta.xml
<CustomField>
    <fullName>Additional_Packaging_Required__c</fullName>
    <label>Additional Packaging Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>