force-app/main/default/objects/Specification__c/fields/additionalInformationNeeded__c.field-meta.xml
<CustomField>
    <fullName>additionalInformationNeeded__c</fullName>
    <label>Additional Information Needed</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Missing SP Artwork</fullName>
            </value>
            <value>
                <fullName>CNC tolerance to be clarified</fullName>
            </value>
            <value>
                <fullName>Missing CAD drawing</fullName>
            </value>
            <value>
                <fullName>Ink type to be defined</fullName>
            </value>
            <value>
                <fullName>IR Tr% to be defined</fullName>
            </value>
            <value>
                <fullName>Other concerns address in mail</fullName>
            </value>
            <value>
                <fullName>SP tolerance to be clarified</fullName>
            </value>
            <value>
                <fullName>VI standard to be clarified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>