force-app/main/default/objects/Specification__c/fields/airShipCost__c.field-meta.xml
<CustomField>
    <fullName>airShipCost__c</fullName>
    <label>Air Ship Cost</label>
    <length>255</length>
    <type>Text</type>
</CustomField>