force-app/main/default/objects/Specification__c/fields/allTechnicalRequirementsIncluded__c.field-meta.xml
<CustomField>
    <fullName>allTechnicalRequirementsIncluded__c</fullName>
    <label>All Technical Requirements Included</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>