force-app/main/default/objects/Specification__c/fields/antiMicrobial__c.field-meta.xml
<CustomField>
    <fullName>antiMicrobial__c</fullName>
    <label>AntiMicrobial</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Not Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>