force-app/main/default/objects/Specification__c/fields/applicationEngineerApproval__c.field-meta.xml
<CustomField>
    <fullName>applicationEngineerApproval__c</fullName>
    <description>AM and AE can approve because some AM are also the AE</description>
    <label>Application Engineer Approval</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Not Approved</fullName>
            </value>
            <value>
                <fullName>Reassign CM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>