force-app/main/default/objects/Specification__c/fields/applicationOfGlass__c.field-meta.xml
<CustomField>
    <fullName>applicationOfGlass__c</fullName>
    <label>Application of Glass</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cover Glass</fullName>
            </value>
            <value>
                <fullName>Integrated Touch</fullName>
            </value>
            <value>
                <fullName>LCM</fullName>
            </value>
            <value>
                <fullName>Substrate</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>