force-app/main/default/objects/Specification__c/fields/approvedBy__c.field-meta.xml
<CustomField>
    <fullName>approvedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approved By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Specifications</relationshipName>
    <type>Lookup</type>
</CustomField>