force-app/main/default/objects/Specification__c/fields/approvedDate__c.field-meta.xml
<CustomField>
    <fullName>approvedDate__c</fullName>
    <label>Approved Date</label>
    <type>Date</type>
</CustomField>