force-app/main/default/objects/Specification__c/fields/approverComments__c.field-meta.xml
<CustomField>
    <fullName>approverComments__c</fullName>
    <label>Approver Comments</label>
    <type>TextArea</type>
</CustomField>