force-app/main/default/objects/Specification__c/fields/arEtcPvd__c.field-meta.xml
<CustomField>
    <fullName>arEtcPvd__c</fullName>
    <label>AR/ETC (PVD)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes, No</fullName>
                <isActive>false</isActive>
                <label>Yes, No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>