force-app/main/default/objects/Specification__c/fields/aspDetails__c.field-meta.xml
<CustomField>
    <fullName>aspDetails__c</fullName>
    <label>ASP Details</label>
    <type>TextArea</type>
</CustomField>