force-app/main/default/objects/Specification__c/fields/Break_Even_Pcs_Needed__c.field-meta.xml
<CustomField>
    <fullName>Break_Even_Pcs_Needed__c</fullName>
    <label>Breakeven Pcs Needed (#Sheets)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>