force-app/main/default/objects/Specification__c/fields/breakevenGapVsPotentialVol__c.field-meta.xml
<CustomField>
    <fullName>breakevenGapVsPotentialVol__c</fullName>
    <label>Breakeven Gap v Potential Vol (#Sheets)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>