force-app/main/default/objects/Specification__c/fields/breakevenGapVsSampleRequest__c.field-meta.xml
<CustomField>
    <fullName>breakevenGapVsSampleRequest__c</fullName>
    <label>Breakeven Gap v Sample Request (#Sheets)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>