force-app/main/default/objects/Specification__c/fields/businessCase__c.field-meta.xml
<CustomField>
    <fullName>businessCase__c</fullName>
    <label>Business Case</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>