force-app/main/default/objects/Specification__c/fields/businessCaseAssessmentComplete__c.field-meta.xml
<CustomField>
    <fullName>businessCaseAssessmentComplete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Business Case Assessment Complete</label>
    <type>Checkbox</type>
</CustomField>