force-app/main/default/objects/Specification__c/fields/cannibalizationGFO__c.field-meta.xml
<CustomField>
    <fullName>cannibalizationGFO__c</fullName>
    <label>Cannibalization GFO</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>