force-app/main/default/objects/Specification__c/fields/cannibalizationGlassCostNoYL__c.field-meta.xml
<CustomField>
    <fullName>cannibalizationGlassCostNoYL__c</fullName>
    <label>Cannibalization Glass Cost (w/o YL)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>