force-app/main/default/objects/Specification__c/fields/cannibalizationGlassCostYL01__c.field-meta.xml
<CustomField>
    <fullName>cannibalizationGlassCostYL01__c</fullName>
    <label>Cannibalization Glass Cost (YL 01)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>