force-app/main/default/objects/Specification__c/fields/cannibalizationGlassCostYL02__c.field-meta.xml
<CustomField>
    <fullName>cannibalizationGlassCostYL02__c</fullName>
    <label>Cannibalization Glass Cost (YL 02)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>