force-app/main/default/objects/Specification__c/fields/cannibalizationLCCMTwo__c.field-meta.xml
<CustomField>
    <fullName>cannibalizationLCCMTwo__c</fullName>
    <label>Cannibalization LC CM #2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Manufacturing_Facility</valueSetName>
    </valueSet>
</CustomField>