force-app/main/default/objects/Specification__c/fields/cannibalizationProcessFeeLCCMOne__c.field-meta.xml
<CustomField>
    <fullName>cannibalizationProcessFeeLCCMOne__c</fullName>
    <label>Cannibalization Process Fee (LC CM #1)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>