force-app/main/default/objects/Specification__c/fields/cannibalizationProcessFeeLCCMTwo__c.field-meta.xml
<CustomField>
    <fullName>cannibalizationProcessFeeLCCMTwo__c</fullName>
    <label>Cannibalization Process Fee (LC CM #2)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>