force-app/main/default/objects/Specification__c/fields/cannibalizationTCO__c.field-meta.xml
<CustomField>
    <fullName>cannibalizationTCO__c</fullName>
    <label>Cannibalization TCO</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>