force-app/main/default/objects/Specification__c/fields/cannibalizationTransportation__c.field-meta.xml
<CustomField>
    <fullName>cannibalizationTransportation__c</fullName>
    <label>Cannibalization Transportation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>