force-app/main/default/objects/Specification__c/fields/cannibalizationYieldLCCMOne__c.field-meta.xml
<CustomField>
    <fullName>cannibalizationYieldLCCMOne__c</fullName>
    <label>Cannibalization Yield (LC CM #1)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>