force-app/main/default/objects/Specification__c/fields/cannibalizationYieldLCCMTwo__c.field-meta.xml
<CustomField>
    <fullName>cannibalizationYieldLCCMTwo__c</fullName>
    <label>Cannibalization Yield (LC CM #2)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>