force-app/main/default/objects/Specification__c/fields/capabilityAssessmentComplete__c.field-meta.xml
<CustomField>
    <fullName>capabilityAssessmentComplete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Capability Assessment Complete</label>
    <type>Checkbox</type>
</CustomField>