force-app/main/default/objects/Specification__c/fields/capabilityAssessmentRemarks__c.field-meta.xml
<CustomField>
    <fullName>capabilityAssessmentRemarks__c</fullName>
    <label>Capability Assessment Remarks</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>