force-app/main/default/objects/Specification__c/fields/capable__c.field-meta.xml
<CustomField>
    <fullName>capable__c</fullName>
    <label>Capable</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Evaluate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>