force-app/main/default/objects/Specification__c/fields/Charge_to__c.field-meta.xml
<CustomField>
    <fullName>Charge_to__c</fullName>
    <label>Charge to</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>COGS</fullName>
            </value>
            <value>
                <fullName>D&amp;E</fullName>
            </value>
            <value>
                <fullName>S&amp;A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>