force-app/main/default/objects/Specification__c/fields/cloneReason__c.field-meta.xml
<CustomField>
    <fullName>cloneReason__c</fullName>
    <description>Clone reason</description>
    <inlineHelpText>Clone reason</inlineHelpText>
    <label>Clone Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>