force-app/main/default/objects/Specification__c/fields/cncTolerance__c.field-meta.xml
<CustomField>
    <fullName>cncTolerance__c</fullName>
    <label>CNC Tolerance</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>cncNeeded__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Drawing</fullName>
            </value>
            <value>
                <fullName>Corning Standard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>