force-app/main/default/objects/Specification__c/fields/Coated__c.field-meta.xml
<CustomField>
    <fullName>Coated__c</fullName>
    <label>Coated</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>