force-app/main/default/objects/Specification__c/fields/commercialApproval__c.field-meta.xml
<CustomField>
    <fullName>commercialApproval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Commercial Approval</label>
    <type>Checkbox</type>
</CustomField>