force-app/main/default/objects/Specification__c/fields/compositionName__c.field-meta.xml
<CustomField>
    <fullName>compositionName__c</fullName>
    <formula>CASE(glassComposition__c, 
&quot;2318&quot;,&quot;Corning® Gorilla® Glass 1&quot;,
&quot;2319&quot;,&quot;Corning® Gorilla® Glass 2&quot;,
&quot;2320 (GG3)&quot;,&quot;Corning® Gorilla® Glass 3&quot;,
&quot;2521 (GG3+)&quot;,&quot;Corning® Gorilla® Glass 3+&quot;,
&quot;5318 (GG4)&quot;,&quot;Corning® Gorilla® Glass 4&quot;, 
&quot;7321 (GG5)&quot;,&quot;Corning® Gorilla® Glass 5&quot;,
&quot;7431 (GG6)&quot;,&quot;Corning® Gorilla® Glass 6&quot;,
&quot;7541 (Victus)&quot;,&quot;Corning® Gorilla® Glass 7&quot;,
&quot;1815&quot;,&quot;Corning® Gorilla® Glass Value Parts&quot;,
&quot;AG2BC&quot;,&quot;Accessory Glass 2 by Corning®&quot;,
&quot;2317&quot;,&quot;2317&quot;,
&quot;3318&quot;,&quot;3318&quot;,
&quot;7418&quot;,&quot;7418&quot;,
&quot;9318&quot;,&quot;9318&quot;,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Composition Name</label>
    <type>Text</type>
</CustomField>