force-app/main/default/objects/Specification__c/fields/contingencyBuyerComment__c.field-meta.xml
<CustomField>
    <fullName>contingencyBuyerComment__c</fullName>
    <label>Contingency Buyer Comment</label>
    <type>TextArea</type>
</CustomField>