force-app/main/default/objects/Specification__c/fields/costApproval__c.field-meta.xml
<CustomField>
    <fullName>costApproval__c</fullName>
    <label>Source 1 Cost Approval</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Not Accepted</fullName>
            </value>
            <value>
                <fullName>Reassign CM</fullName>
            </value>
            <value>
                <fullName>Reevaluate Risk</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>