force-app/main/default/objects/Specification__c/fields/costAssessmentComment__c.field-meta.xml
<CustomField>
    <fullName>costAssessmentComment__c</fullName>
    <label>Source 1 Cost Assessment Comment</label>
    <type>TextArea</type>
</CustomField>