force-app/main/default/objects/Specification__c/fields/costAssessmentComplete__c.field-meta.xml
<CustomField>
    <fullName>costAssessmentComplete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Source 1 Cost Assessment Complete</label>
    <type>Checkbox</type>
</CustomField>