force-app/main/default/objects/Specification__c/fields/currentPrice1__c.field-meta.xml
<CustomField>
    <fullName>currentPrice1__c</fullName>
    <label>Current Price 1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>