force-app/main/default/objects/Specification__c/fields/currentPrice2__c.field-meta.xml
<CustomField>
    <fullName>currentPrice2__c</fullName>
    <label>Current Price 2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>