force-app/main/default/objects/Specification__c/fields/currentPrice3__c.field-meta.xml
<CustomField>
    <fullName>currentPrice3__c</fullName>
    <label>Current Price 3</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>