force-app/main/default/objects/Specification__c/fields/currentPriceUnit__c.field-meta.xml
<CustomField>
    <fullName>currentPriceUnit__c</fullName>
    <label>Current Price/Unit (with Shipping)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>