force-app/main/default/objects/Specification__c/fields/currentSamplePrice__c.field-meta.xml
<CustomField>
    <fullName>currentSamplePrice__c</fullName>
    <label>Current Sample Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>