force-app/main/default/objects/Specification__c/fields/Customer_P_N__c.field-meta.xml
<CustomField>
    <fullName>Customer_P_N__c</fullName>
    <label>Customer P/N</label>
    <length>40</length>
    <type>Text</type>
</CustomField>