force-app/main/default/objects/Specification__c/fields/customerDrawingNumber__c.field-meta.xml
<CustomField>
    <fullName>customerDrawingNumber__c</fullName>
    <label>Customer Drawing Number</label>
    <length>155</length>
    <type>Text</type>
</CustomField>