force-app/main/default/objects/Specification__c/fields/dateAllInformationReceived__c.field-meta.xml
<CustomField>
    <fullName>dateAllInformationReceived__c</fullName>
    <label>Date All Information Received</label>
    <type>Date</type>
</CustomField>