force-app/main/default/objects/Specification__c/fields/declineReason__c.field-meta.xml
<CustomField>
    <fullName>declineReason__c</fullName>
    <label>Decline Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>GG did not meet OEM specs / test criteria</fullName>
            </value>
            <value>
                <fullName>Incorrect Information</fullName>
            </value>
            <value>
                <fullName>Missing Information</fullName>
            </value>
            <value>
                <fullName>No CM available</fullName>
            </value>
            <value>
                <fullName>Open &gt; 60 Days</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Spec/Capability Limitation</fullName>
            </value>
            <value>
                <fullName>Supply Constraint</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>