force-app/main/default/objects/Specification__c/fields/declineReasonOther__c.field-meta.xml
<CustomField>
    <fullName>declineReasonOther__c</fullName>
    <label>Decline Reason Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>