force-app/main/default/objects/Specification__c/fields/declineSpecification__c.field-meta.xml
<CustomField>
    <fullName>declineSpecification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Decline Specification</label>
    <type>Checkbox</type>
</CustomField>