force-app/main/default/objects/Specification__c/fields/Deco_Film__c.field-meta.xml
<CustomField>
    <fullName>Deco_Film__c</fullName>
    <inlineHelpText>If Deco Film is selected, please provide the color/effect information in General Comments field.</inlineHelpText>
    <label>Deco Film</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>