force-app/main/default/objects/Specification__c/fields/demandManagementFinalReviewCompleted__c.field-meta.xml
<CustomField>
    <fullName>demandManagementFinalReviewCompleted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Demand Management Final Review Completed</label>
    <type>Checkbox</type>
</CustomField>