force-app/main/default/objects/Specification__c/fields/demandManagerComment__c.field-meta.xml
<CustomField>
    <fullName>demandManagerComment__c</fullName>
    <label>Demand Manager Comment</label>
    <type>TextArea</type>
</CustomField>