force-app/main/default/objects/Specification__c/fields/description__c.field-meta.xml
<CustomField>
    <fullName>description__c</fullName>
    <formula>compositionName__c+&quot;(&quot;+TEXT(glassComposition__c)+&quot;); &quot; + TEXT(specialShapes__c)</formula>
    <label>Description</label>
    <type>Text</type>
</CustomField>