force-app/main/default/objects/Specification__c/fields/diagonalInch__c.field-meta.xml
<CustomField>
    <fullName>diagonalInch__c</fullName>
    <formula>SQRT((length__c ^ 2) + ( width__c ^ 2)) * 0.0393701</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Diagonal (Inch)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>