force-app/main/default/objects/Specification__c/fields/dimensions__c.field-meta.xml
<CustomField>
    <fullName>dimensions__c</fullName>
    <formula>TEXT( FLOOR( width__c ) ) + &quot;.&quot; + right( text( ( 1 + width__c - floor( width__c ) ) * 1000 ), 3 )+&quot;(mm) x &quot; + TEXT( FLOOR(length__c) ) + &quot;.&quot; + right( text( ( 1 + length__c - floor(length__c) ) * 1000 ), 3 )+&quot;(mm)&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dimensions</label>
    <type>Text</type>
</CustomField>