force-app/main/default/objects/Specification__c/fields/dsActualSource__c.field-meta.xml
<CustomField>
    <fullName>dsActualSource__c</fullName>
    <label>Actual Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dual Source</fullName>
            </value>
            <value>
                <fullName>Single Source</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>