force-app/main/default/objects/Specification__c/fields/dsCostAssessmentComment__c.field-meta.xml
<CustomField>
    <fullName>dsCostAssessmentComment__c</fullName>
    <label>Source 2 Cost Assessment Comment</label>
    <type>TextArea</type>
</CustomField>