force-app/main/default/objects/Specification__c/fields/dsCostAssessmentComplete__c.field-meta.xml
<CustomField>
    <fullName>dsCostAssessmentComplete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Source 2 Cost Assessment Complete</label>
    <type>Checkbox</type>
</CustomField>