force-app/main/default/objects/Specification__c/fields/dsFinalCMCostAssessmentApprovedB__c.field-meta.xml
<CustomField>
    <fullName>dsFinalCMCostAssessmentApprovedB__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>S2 Final CM Cost Assessment Confirmed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Specifications4</relationshipName>
    <type>Lookup</type>
</CustomField>