force-app/main/default/objects/Specification__c/fields/dsInChargeRole__c.field-meta.xml
<CustomField>
    <fullName>dsInChargeRole__c</fullName>
    <formula>CASE( dsStatus__c ,
&quot;New&quot;, &quot;AM &amp; AE&quot;,
&quot;Manufacturer Assignment&quot;, &quot;Planner&quot;,
&quot;Risk Assessment&quot;, &quot;QA, Plant Engineer and AE&quot;,
&quot;CM Cost Assessment&quot;, &quot;Finance and Cost Manager&quot;,
&quot;Pricing Approved&quot;, &quot;AM&quot;,
&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>In Charge Role</label>
    <type>Text</type>
</CustomField>