force-app/main/default/objects/Specification__c/fields/dsLocation__c.field-meta.xml
<CustomField>
    <fullName>dsLocation__c</fullName>
    <label>Secondary CM Selected Locations</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Manufacturing_Facility</valueSetName>
    </valueSet>
</CustomField>