force-app/main/default/objects/Specification__c/fields/dsManufacturerAssignmentRemarks__c.field-meta.xml
<CustomField>
    <fullName>dsManufacturerAssignmentRemarks__c</fullName>
    <label>Secondary Manufacturer Assignment Remark</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>